[gd_scene load_steps=3 format=3 uid="uid://uotyx1dpynrl"]

[ext_resource type="FontFile" uid="uid://bmhcchy4wwt61" path="res://assets/fonts/Mario64.ttf" id="1_21gke"]
[ext_resource type="Script" uid="uid://dv4cbs3re83hq" path="res://3D Scene/menus/character_dialog.gd" id="1_xy50e"]

[node name="CharacterDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xy50e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.0509804, 0.0509804, 0.0509804, 0.211765)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Text" type="RichTextLabel" parent="VBoxContainer/ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_21gke")
theme_override_font_sizes/normal_font_size = 32
text = "HELLO LMAO WTF MY GUY"
fit_content = true

[node name="CloseDisplay" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 1129.0
offset_top = 617.0
offset_right = 1146.0
offset_bottom = 640.0
theme_override_fonts/normal_font = ExtResource("1_21gke")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[pulse freq=1.0 color=#ffffff40 ease=-2.0]X[/pulse]"

[node name="NextDisplay" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 1129.0
offset_top = 618.0
offset_right = 1146.0
offset_bottom = 641.0
rotation = -0.137426
theme_override_fonts/normal_font = ExtResource("1_21gke")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[pulse freq=1.0 color=#ffffff40 ease=-2.0]V[/pulse]"
